src/runtime/runtime.h

/* Forward declarations */
typedef struct SplArray SplArray;
/* ===== Dynamic Array ===== */

struct SplArray {
    SplValue* items;
    int64_t   len;
    int64_t   cap;
};
/* ===== Directory Operations ===== */

bool     rt_dir_create(const uint8_t* path_ptr, uint64_t path_len, bool recursive);
/* -> RuntimeValue (I64) array of text, per runtime_sffi.rs:1888. */
int64_t  rt_dir_list(const uint8_t* path_ptr, uint64_t path_len);
/* ===== File Locking ===== */

/* ABI: rt_file_lock IS in text_arg_indices (calls.rs:2672 `Some(&[0])`), so
 * `text` splits into a raw (ptr, len) pair -- the OPPOSITE of rt_mmap above.
 * Confirmed by the codegen spec (runtime_sffi.rs:323 = [I64,I64,I64] -> [I64])
 * and the Rust runtime (file_ops.rs:679). platform_win.h:276 already had the
 * correct shape; this declaration was the stale one. */
int64_t  rt_file_lock(const uint8_t* path_ptr, uint64_t path_len, int64_t timeout_secs);
bool     rt_file_unlock(int64_t handle);
/* Nullable tagged RuntimeValue: nil on failure, owned byte array on success. */
int64_t     rt_file_mmap_read_bytes(const uint8_t* path_ptr, uint64_t path_len);
/* -> RuntimeValue (I64), per runtime_sffi.rs:1419. NOT a bare SplArray*. */
int64_t   rt_process_run(const char* cmd, uint64_t cmd_len, SplArray* args);
int64_t     rt_env_get(const uint8_t* key, uint64_t key_len);
bool        rt_env_set(const uint8_t* key, uint64_t key_len, const uint8_t* value, uint64_t value_len);
/* -> RuntimeValue (I64), per runtime_sffi.rs:1773. NOT a C string;
 * use rt_getcwd() above for the C-string form. */
int64_t  rt_env_cwd(void);
int64_t  rt_getpid(void);
char*    rt_hostname(void);
/* ===== rt_ Aliases (FFI-compatible wrappers) ===== */

/* -> RuntimeValue (I64), per runtime_sffi.rs:1852. NOT a C string. */
int64_t     rt_file_read_text(const uint8_t* path_ptr, uint64_t path_len);
int         rt_file_exists(const uint8_t* path_ptr, uint64_t path_len);
int         rt_file_write_text(const uint8_t* path, uint64_t path_len, const uint8_t* content, uint64_t content_len);
int         rt_file_append_text(const uint8_t* path, uint64_t path_len, const uint8_t* content, uint64_t content_len);
int         rt_file_delete(const uint8_t* path_ptr, uint64_t path_len);
int         rt_file_copy(const uint8_t* src_ptr, uint64_t src_len,
                         const uint8_t* dst_ptr, uint64_t dst_len);
int64_t     rt_file_size(const uint8_t* path_ptr, uint64_t path_len);